kubernetes/apps/dev/gitlab/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitlab.${SECRET_DOMAIN}`)
      middlewares:
        - name: external-default
        # - name: basicauth
      services:
        - name: gitlab-webservice-default
          namespace: dev
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
